--- a/TransactionApp/src/app/group-edit/group-edit.component.html
+++ b/TransactionApp/src/app/group-edit/group-edit.component.html
@@ -2,42 +2,40 @@
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
     <li class="breadcrumb-item"><a routerLink="/groups">Groups</a></li>
-    <li class="breadcrumb-item active">Edit Group</li>
+    <li class="breadcrumb-item active">View Group</li>
   </ol>
 </nav>
 
 <h2>Group Information</h2>
 <div *ngIf="feedback.message" class="alert alert-{{feedback.type}}">{{ feedback.message }}</div>
-<form *ngIf="group" #editForm="ngForm" (ngSubmit)="save()">
+
+<form *ngIf="group">
   <mat-form-field class="full-width" *ngIf="group.id">
     <mat-label>ID</mat-label>
     <input matInput [(ngModel)]="group.id" id="id" name="id" placeholder="ID" readonly>
   </mat-form-field>
   <mat-form-field class="full-width">
     <mat-label>Name</mat-label>
-    <input matInput [(ngModel)]="group.name" id="name" name="name" placeholder="Name" required>
+    <input matInput [(ngModel)]="group.name" id="name" name="name" placeholder="Name" required readonly>
   </mat-form-field>
+  
   <h3 *ngIf="group.events?.length">Events</h3>
+  
   <div *ngFor="let event of group.events; index as i" class="full-width">
     <mat-form-field style="width: 35%">
       <mat-label>Date</mat-label>
-      <input matInput [matDatepicker]="picker"
-             [(ngModel)]="group.events[i].date" name="group.events[{{i}}].date" placeholder="Date">
-      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-datepicker #picker></mat-datepicker>
+      <input matInput [matDatepicker]="picker" [(ngModel)]="group.events[i].date" name="group.events[{{i}}].date" placeholder="Date" readonly>
+      <!-- Disabled the date picker toggle -->
+      <mat-datepicker-toggle matSuffix [for]="picker" [disabled]="true"></mat-datepicker-toggle>
+      <mat-datepicker #picker disabled></mat-datepicker>
     </mat-form-field>
     <mat-form-field style="width: 65%">
       <mat-label>Title</mat-label>
-      <input matInput [(ngModel)]="group.events[i].title" name="group.events[{{i}}].title" placeholder="Title">
+      <input matInput [(ngModel)]="group.events[i].title" name="group.events[{{i}}].title" placeholder="Title" readonly>
     </mat-form-field>
-    <button mat-icon-button (click)="removeEvent(i)" aria-label="Remove Event"
-            style="float: right; margin: -70px -5px 0 0">
-      <mat-icon>delete</mat-icon>
-    </button>
   </div>
 
   <div class="button-row" role="group">
-
     <button type="button" mat-button color="accent" (click)="cancel()" id="cancel">Back</button>
   </div>
 </form>
